--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wilddog-token-generator-node",
-  "version": "0.0.0",
+  "name": "wilddog-token-generator",
+  "version": "0.1.0",
   "description": "Json Web Token generator for Wilddog",
   "main": "index.js",
   "scripts": {
